<resources>
    <string name="app_name">beauty_scanner</string>
    <string name="facescan">FaceScan</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="post_image">Post Image</string>
    <string name="share_post">Share post</string>
    <string name="chat_button">Chat button</string>
    <string name="you_don_t_have_a_username_yet">You don\'t have a username yet</string>
    <string name="please_choose_a_username">Please choose a username...</string>
    <string name="save_username">Save username</string>
    <string name="community_rating">Community Rating</string>
    <string name="background_image">Background image</string>
    <string name="beauty_scanner">Beauty Scanner</string>
    <string name="continue_button">Continue</string>
    <string name="search">Search</string>
    <string name="grid_post_image">Grid post image</string>
    <string name="rate_me">Rate me</string>
    <string name="result">Result</string>
    <string name="symmetry">Symmetry:</string>
    <string name="golden_ratio">Golden ratio:</string>
    <string name="facial_structure">Facial structure:</string>
    <string name="total_avarage">Total avarage:</string>
    <string name="sign_out">Sign Out</string>
    <string name="hate_it">Hate it</string>
    <string name="love_it">Love it</string>
</resources>