<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_register"
    tools:context=".ui.fragments.loginfragments.RegisterFragment">


    <TextView
        android:id="@+id/tvFirstTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/you_don_t_have_a_username_yet"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etCreateUsername"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_margin="48dp"
        android:hint="@string/please_choose_a_username"
        android:background="@drawable/et_background"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvFirstTime" />

    <Button
        android:id="@+id/btnCreateUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:background="@drawable/btn_background_pink"
        android:text="@string/save_username"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>