<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <ImageView
        android:id="@+id/ivRateImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:src="@drawable/img_example_user"
        android:contentDescription="@string/post_image"
        android:scaleType="centerCrop"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieSwipeUp"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.6"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llLikeContainer"
        app:lottie_rawRes="@raw/swipte_up"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="24dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <ImageView
        android:id="@+id/btnShare"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_share_2"
        android:contentDescription="@string/share_post"
        android:layout_marginTop="100dp"/>

    <ImageView
        android:id="@+id/btnMessage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/chat_button"
        app:layout_constraintTop_toBottomOf="@id/btnShare"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/messenger"
        android:layout_marginTop="32dp"/>

    <TextView
        android:layout_marginTop="24dp"
        android:id="@+id/tvItemUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="@font/baloo"
        android:textColor="@color/white" />


    <LinearLayout
        android:id="@+id/llLikeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvDislike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:fontFamily="@font/winter"
            android:gravity="center"
            android:text="Hate it"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvLike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:fontFamily="@font/winter"
            android:gravity="center"
            android:text="Love it"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>




    <androidx.viewpager2.widget.ViewPager2
        android:visibility="gone"
        android:id="@+id/vvNumberRating"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
