<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_pink"
    tools:context=".ui.fragments.detailfragments.ScanResultFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvResultImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6">

        <ImageView
            android:id="@+id/ivResult2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_pink" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/cvResultImage" />

    <TextView
        android:id="@+id/tvSymmetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/symmetry"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <TextView
        android:id="@+id/tvSymmatryRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="9"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line5"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <TextView
        android:id="@+id/tvGoldenRatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/golden_ratio"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <TextView
        android:id="@+id/tvGoldenRatioRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="9"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tvSymmatryRating"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <TextView
        android:id="@+id/tvBoneStructure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/facial_structure"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <TextView
        android:id="@+id/tvBoneStructureRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="9"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tvSymmatryRating"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <TextView
        android:id="@+id/tvTotalAvarage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="Total avarage"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line4" />

    <TextView
        android:id="@+id/tvTotalAvarageRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="9"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/tvTotalAvarage" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvResult" />

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvSymmetry" />

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvGoldenRatio" />

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvBoneStructure" />

    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/line4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#E91E63"
        android:clickable="true"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnShareToCommunity"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@id/fabBtnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fabBtnBack" />


</androidx.constraintlayout.widget.ConstraintLayout>